# babymon

./: .clang-format  .env.template  .gitignore  CMakeLists.txt  README.md  TODO.md  sdkconfig  sdkconfig.defaults
docs/: BOM.md  pins.md  requirements.md
docs/report/: README.md
src/: CMakeLists.txt  amb_temp_humidity.c  ambient_temp.c  bme680.c  body_temp.c  co2.c  heart_rate.c  hvac.c  main.c  max30102.c  max30205_driver.c  mobility_mon.c  shared_i2c.c  sms.c  sound_mon.c  telemetry.c  test.c  wifi.c
src/include/: bme680.h  bme680_platform.h  bme680_types.h  driver_max30205.h  main.h  max30205_platform.h  shared_i2c.h  telemetry.h  test.h  wifi_events.h
ui/: app.js  index.html  insert-test-data.js  package.json  server.js  styles.css
